--- a/application/requirements.txt
+++ b/application/requirements.txt
@@ -14,6 +14,7 @@ pathspec==0.12.1
 platformdirs==4.3.6
 pydantic==2.10.5
 pydantic_core==2.27.2
+python-dotenv==1.0.1
 ruff==0.9.2
 sniffio==1.3.1
 SQLAlchemy==2.0.37
