--- a/application/requirements.txt
+++ b/application/requirements.txt
@@ -1,17 +1,24 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.8.0
 asyncpg==0.30.0
+attrs==24.3.0
 black==24.10.0
 click==8.1.8
 colorama==0.4.6
 fastapi==0.115.7
+frozenlist==1.5.0
 greenlet==3.1.1
 h11==0.14.0
 idna==3.10
+multidict==6.1.0
 mypy-extensions==1.0.0
 packaging==24.2
 pathspec==0.12.1
 platformdirs==4.3.6
+propcache==0.2.1
 pydantic==2.10.5
 pydantic_core==2.27.2
 python-dotenv==1.0.1
@@ -21,3 +28,4 @@ SQLAlchemy==2.0.37
 starlette==0.45.2
 typing_extensions==4.12.2
 uvicorn==0.34.0
+yarl==1.18.3
