--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,4 +8,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+    location /api/check-user {
+        deny all;
+        return 403;
+    }
 }
