--- a/application/requirements.txt
+++ b/application/requirements.txt
@@ -13,14 +13,18 @@ frozenlist==1.5.0
 greenlet==3.1.1
 h11==0.14.0
 idna==3.10
+iniconfig==2.0.0
 multidict==6.1.0
 mypy-extensions==1.0.0
 packaging==24.2
 pathspec==0.12.1
 platformdirs==4.3.6
+pluggy==1.5.0
 propcache==0.2.1
 pydantic==2.10.5
 pydantic_core==2.27.2
+pytest==8.3.4
+pytest-asyncio==0.25.3
 python-dotenv==1.0.1
 ruff==0.9.2
 sniffio==1.3.1
